# DragonfireEnginePublic

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: build.yml
assets/: default_settings.json
assets/materials/: basic.json  basic_material.json
client/: CMakeLists.txt
client/include/ui/: ui_renderer.h
client/rendering/: CMakeLists.txt
client/rendering/include/: camera.h  model.h  render_context.h  renderer.h  vertex.h
client/rendering/shaders/: CMakeLists.txt  base.vert
client/rendering/shaders/src/: base.frag  base.vert  ui.frag
client/rendering/src/: allocation.cpp  allocation.h  camera.cpp  error_texture.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  pipeline.cpp  pipeline.h  render_asset_loaders.cpp  render_asset_loaders.h  render_context.cpp  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vertex_buffer.cpp  vertex_buffer.h  vk_init.cpp  vulkan_includes.h  vulkan_ui_renderer.cpp  vulkan_ui_renderer.h
client/src/: game_client.cpp  game_client.h  input.cpp  input.h  local_game.cpp  local_game.h  main.cpp  ui.cpp  ui.h
client/src/ui/: application.cpp  application.h  ui.cpp  ui.h  ui_renderer.cpp  widget.cpp  widget.h
client/src/world/: local_world.cpp  local_world.h
cmake/: FindLuaJIT.cmake  download_dependencies.CMake  init.cmake  linux_to_win64.CMake
core/: CMakeLists.txt
core/include/: asset.h  config.h  controller.h  core.h  crash.h  dynamic_array.h  event.h  file.h  game.h  math.h  net.h  noise.h  physics.h  platform.h  rng.h  thread_pool.h  transform.h  util.h  world.h
core/include/voxel/: chunk.h  voxel.h
core/include/world/: world.h
core/src/: asset.cpp  config.cpp  controller.cpp  event.cpp  file.cpp  game.cpp  net.cpp  noise.cpp  physics.cpp  rng.cpp  thread_pool.cpp  util.cpp  world.cpp
core/src/platform/: linux.cpp  windows.cpp
core/src/voxel/: chunk.cpp  voxel.cpp
core/src/world/: world.cpp
core/test/: asset.cpp  net.cpp  thread_pool.cpp
engine/: CMakeLists.txt
engine/application/: CMakeLists.txt
engine/application/src/: app.cpp  app.h  main.cpp
engine/core/: CMakeLists.txt
engine/core/include/: allocators.h  config.h  core.h  file.h  math.h  noise.h  rng.h  utility.h  vertex.h  world.h
engine/core/include/voxel/: chunk.h  voxel.h
engine/core/src/: allocators.cpp  config.cpp  core.cpp  file.cpp  noise.cpp  rng.cpp  utility.cpp  world.cpp
engine/core/src/voxel/: chunk.cpp  voxel.cpp
engine/graphics/: CMakeLists.txt
engine/graphics/include/: camera.h  material.h  model.h  renderer.h  transform.h
engine/graphics/src/: camera.cpp  material.cpp  model.cpp  renderer.cpp
engine/graphics/vulkan/: CMakeLists.txt
engine/graphics/vulkan/src/: allocation.cpp  allocation.h  descriptor_set.cpp  descriptor_set.h  init.cpp  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  swapchain.cpp  swapchain.h  texture.cpp  texture.h  vk_include.h  vk_material.cpp  vk_material.h  vk_renderer.cpp  vk_renderer.h
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.h
shaders/: CMakeLists.txt
shaders/glsl/: base.frag  base.vert  cull.comp  textures.glsl
